<resources>
    <string name="app_name">WidgetLingo</string>
    <string name="welcome_to_widgetlingo">Welcome to\nWidgetLingo</string>
    <string name="hello_dingo">Hello! I\'m Dingo -\nyour assistant in learning a new language\nlet\'s choose the language you want to learn</string>
    <string name="learning_description">Learning will proceed like this: I will send a new word in %s to your widget, and you will remember its spelling, transcription, and translation.</string>
    <string name="ok">OK</string>
    <string name="great_details">Great! Then let\'s clarify the details about the widget. We need to choose the difficulty and frequency of word updates.</string>
    <string name="all_ready">All set! Just need to create the widget!</string>
    <string name="create_widget">Create Widget</string>
    <string name="native_language">Native Language</string>
    <string name="study_language">Study Language</string>
    <string name="difficulty">Difficulty</string>
    <string name="frequency">Frequency</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="mixed">Mixed</string>
    <string name="every_hour">Every hour</string>
    <string name="every_6_hours">Every 6 hours</string>
    <string name="every_day">Every day</string>
    <string name="next">Next</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="widget_description">Widget for learning new words. Displays the word, translation, and transcription.</string>
    <string name="settings_title">Settings</string>
    <string name="info_title">Information</string>
    <string name="widget_management">Widget Management</string>
    <string name="add_widget">Add Widget</string>
    <string name="remove_widget">Remove Widget</string>
    <string name="add_widget_manually">Add widget manually from home screen</string>
    <string name="remove_widget_manually">Remove widget manually from home screen</string>
    <string name="creators_title">Project Created By</string>
    <string name="creators_description">venttt</string>
    <string name="github_title">GitHub</string>
    <string name="github_description">Go to repository</string>
    <string name="language">Language</string>
    <string name="cancel">Cancel</string>
</resources>