<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95D6F8">

    <ImageView
        android:id="@+id/dingo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/dingo2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hello_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_dingo"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/dingo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/study_language_container" />

    <LinearLayout
        android:id="@+id/study_language_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layout_russian_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag_russia" />

            <TextView
                android:id="@+id/tv_russian_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_english_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="16dp">  <!-- Добавили отступ между флагами -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag_english" />

            <TextView
                android:id="@+id/tv_english_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_spanish_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag_spain" />

            <TextView
                android:id="@+id/tv_spanish_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>